syntax = "proto3";
import "google/protobuf/empty.proto";
package scheduler;
option go_package = "tsuwari/grpc/scheduler";

service Scheduler {
  rpc CreateDefaultCommandsAndRoles(CreateDefaultCommandsAndRolesRequest) returns (google.protobuf.Empty) {}
}

message CreateDefaultCommandsAndRolesRequest {
  string userId = 1;
}
